--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contact-card{
   display: flex;
-  flex-direction: column;
+  padding: 10px;
+  color: white;
+  background-color: darkblue;
+  font-family: "Segoe UI",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-shadow: 10px 10px 25px -16px rgba(0,0,0,0.75);
+  border-radius: 10px;
+  max-width: 500px;
+  max-height: 125px;
+  margin-bottom: 10px;
+}
+
+.contact-card p {
+  margin-left: 10px;
+  margin-top: 0px;
+}
+
+button{
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.refershbutton{
+  height: 40px;
+  width: 150px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: darkblue;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
+  border-radius: 5px;
 }
